Refactor script execution in ScriptController: use ProcessBuilder for better error handling and update script path for consistency; adjust CheckRoute.py asset paths for improved compatibility.